Finish layout and fix overflow bug

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 body{
     margin: 0;
 }
@@ -15,10 +19,10 @@ div{
 }
 
 .right-wrapper{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1.2fr 4fr;
+    padding: 0;
 }
 
 .right-wrapper > div{
@@ -30,18 +34,29 @@ div{
     display: grid;
     grid-template-columns: 2.3fr 1fr;
     width: 100%;
+    height: 100%;
+    padding: 0;
 }
 
 .content-wrapper-left{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 1fr;
     gap: 20px;
-    padding-left: 15px;
-    padding-right: 15px;
+    height: 100%;
 }
 
 .content-heading-wrapper{
-    padding: 10px 10px 0px 0px;
+    padding: 15px 10px 0px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: stretch;
+}
+
+h2{
+    margin: 0;
+    margin-bottom: 10px;
 }
 
 .content-wrapper-right{
@@ -65,13 +80,11 @@ div{
     padding: 0;
 }
 
-.content-right{
-}
-
 .header{
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1.2fr;
+    padding: 0;
 }
 
 .header-top-wrapper{
@@ -86,4 +99,19 @@ div{
     grid-template-columns: 1.5fr 1.2fr;
     grid-template-rows: 1fr;
     padding: 0;
+}
+
+.sidebar{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-row: 1fr 10fr 10fr;
+    padding: 0;
+}
+
+.sidebar-inner-wrapper{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 1fr;
+    gap: 10px;
+    padding: 10px 15px 10px 15px;
 }
